--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -45,6 +45,7 @@
         android:layout_marginTop="240dp"
         android:layout_marginEnd="177dp"
         android:backgroundTint="#ab3add"
+        android:contentDescription=" "
         android:src="@drawable/baseline_add_alarm_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
